@@ -6,6 +6,8 @@ SVN revision: ?
 	* Bugfix: All GARP algorithms were crashing when the abundance value associated with one of the occurrence points had more than two digits in the integer part.
 	* Increased the default number of neurons in the hidden layer of the ANN algorithm.
 	* New argument "s" in om_niche allowing model outputs to be scaled.
+	* Re-implemented and re-enabled Maximum entropy algorithm based on the well-known Maxent.
+	* Changed environmental distance algorithm forcing the Mahalanobis distance to use an identity matrix as the covariance matrix when there's only one input point.
 
 Release 1.0 (2009-05-22)
 ------------------------
